# rust_server

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
entities/: Cargo.toml
entities/src/: block_info.rs  mod.rs  prelude.rs  tx_info.rs  user_info.rs
migration/: Cargo.toml
migration/src/: block_data.rs  lib.rs  tx_data.rs  user_data.rs
src/: error.rs  lib.rs  main.rs
src/routes/: auth_routes.rs  block_routes.rs  mod.rs  tx_routes.rs  user_routes.rs
src/routes/handlers/: auth_handlers.rs  block_handlers.rs  mod.rs  tx_handlers.rs  user_handlers.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: api_response.rs  constants.rs  jwt.rs  mod.rs
src/utils/thread_pool/: mod.rs  thread_pool.rs
