[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entities", "migration"]

[dependencies]
entities = {path = "entities"}
migration = {path= "migration"}
actix-web = "4.5.1"
serde = "1.0.197"
serde_json = "1.0.1"
env_logger = "0.11.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"
sea-orm = { version = "0.12", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
sha256 = "1.5.0"
chrono = "0.4.37"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.20.2"
actix-multipart = "0.6.1"
sanitize-filename = "0.5.0"
derive_more = "0.99.17"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
tokio-test = "0.4"
actix-rt = "2.8"
sea-orm = { version = "0.12", features = ["mock"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

